...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp" />

    <View
        android:layout_width="match_parent"
...
